--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,9 @@
     margin: 0;
     padding: 0;   
 }
-
 .nav {
     margin: -50px 50px;
 }
-
 .nome-site {  
     height: 100px; 
     font-size: 16px; 
@@ -28,7 +26,6 @@
 a {
     text-decoration: none;
 }
-
 h2, h3 {
     color: tomato;
     font-family: 'Nunito', sans-serif;
@@ -36,25 +33,29 @@ h2, h3 {
     font-size: 40px;
     font-weight: 900;
 }
-
 body {
     background: #1a191f;
 }
-
 .card {
     padding: 15px;
     background: #383838;
     box-shadow: 3px 3px 3px #ffffff80;
+    transition: all 0.5s;   
 }
-
+.card:hover {
+    -webkit-transform: scale(1.0);
+    transform: scale(1.1);
+}
 h5 {
     color: white;
     font-size: 16px;
     font-family: 'Nunito', sans-serif; 
 }
-
 footer {
     color: #fff;
     text-align: center;
     padding-top: 50px;
+}
+.btn:hover {
+    background: #a52b86;
 }
